--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ruqqus-js",
   "version": "2.1.0",
   "description": "A Node.js wrapper of the Ruqqus API; designed for Ruqqus Applications.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
