Fixed a bug tha was causing a crash
`this.keys.refresh.refresh = resp.refresh_token || null;`
was expecting response to return refresh_token, but it doesn't.... because it doesn't need to. refresh_token is supposed to be the same every time, so it was setting refresh_token to null causing an error when trying to refresh the access_token

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/acikek/ruqqus-js.git"
+    "url": "https://github.com/Ruqqus-API/ruqqus-js.git"
   },
   "author": "acikek",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/acikek/ruqqus-js/issues"
+    "url": "https://github.com/Ruqqus-API/ruqqus-js/issues"
   },
-  "homepage": "https://github.com/acikek/ruqqus-js#readme",
+  "homepage": "https://github.com/Ruqqus-API/ruqqus-js#readme",
   "dependencies": {
     "needle": "^2.5.0"
   }
